change hook of modal to avoid z-index bug and fix preventDefault applied on a wrong object in the JS

--- a/templates/frontOffice/default/product.javascript-initialization.html
+++ b/templates/frontOffice/default/product.javascript-initialization.html
@@ -53,7 +53,7 @@
         });
 
         $section.on('submit', 'form', function(ev) {
-            event.preventDefault();
+            ev.preventDefault();
 
             saveStockAlert($(this));
         });
