--- a/templates/backOffice/default/configuration.html
+++ b/templates/backOffice/default/configuration.html
@@ -33,7 +33,7 @@
 
                     {render_form_field form=$form field="emails"}
 
-                    <button type="submit" id="stockalert-save" name="stockalert_save" value="save" class="form-submit-button btn btn-sm btn-default" title="{intl d='stockalert.bo.default' l='Save'}">{intl d='stockalert.ai' l='Save'}</button>
+                    <button type="submit" id="stockalert-save" name="stockalert_save" value="save" class="form-submit-button btn btn-primary" title="{intl d='stockalert.bo.default' l='Save'}">{intl d='stockalert.bo.default' l='Save'}</button>
                 </form>
                 {/form}
 
