Add export StockAlert Button + fix Pagination v2

--- a/templates/backOffice/default/configuration.html
+++ b/templates/backOffice/default/configuration.html
@@ -49,13 +49,12 @@
 
         <div class="col-md-12 title title-without-tabs">
             {intl d='stockalert.bo.default' l='List of current subscriptions.'}
+            <div class="pull-right">
+                <a title="Do this export" class="btn btn-default btn-responsive" href="{url path="/admin/export/%export" export=$export_stock_alert_id}"><i class="glyphicon glyphicon-open"></i></a>
+            </div>
         </div>
         {$limit={$smarty.get.limit|default:10}}
         {$page={$smarty.get.page|default:1}}
-
-        {if {count type="restocking-alert"} < $limit * $page}
-            {$page=1}
-        {/if}
 
         <div class="col-md-12">
             {ifloop rel="restocking-alert"}
