Add Notify Admin checkbox

--- a/templates/backOffice/default/configuration.html
+++ b/templates/backOffice/default/configuration.html
@@ -29,6 +29,8 @@
 
                     {render_form_field form=$form field="enabled"}
 
+                    {render_form_field form=$form field="notify"}
+
                     {render_form_field form=$form field="threshold"}
 
                     {render_form_field form=$form field="emails"}
